--- a/CommunityMarket/app/src/main/res/layout/fragment_lingerie.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_lingerie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.LingerieFragment"
+    tools:context=".Fragments.mode.LingerieFragment"
     android:id="@+id/layout"
     android:background="@color/black"    >
 
