--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,6 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:fontFamily="@font/righteous"
             android:elevation="15dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             android:background="@drawable/gradient_list"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             >
