--- a/CommunityMarket/app/src/main/res/layout/content_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/content_accueil.xml
@@ -9,22 +9,6 @@
     tools:showIn="@layout/app_bar_accueil"
     android:background="#E0E0E0">
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="invisible"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-4353172129870258/3649563954"
-        ads:layout_constraintBottom_toBottomOf="@+id/tabsview"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintTop_toBottomOf="@+id/content_floating_action_btn"></com.google.android.gms.ads.AdView>
     <!-- my id ca-app-pub-4353172129870258/3649563954-->
     <!-- pour eux id ca-app-pub-3940256099942544/6300978111-->
 
@@ -32,11 +16,14 @@
         android:id="@+id/content_floating_action_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.827"
         app:srcCompat="@drawable/ic_ajouter" />
 
     <android.support.v4.view.ViewPager
@@ -46,8 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </android.support.v4.view.ViewPager>
+        app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
 
 
 
