--- a/CommunityMarket/app/src/main/res/layout/fragment_chaussure.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_chaussure.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.ChaussureFragment"
+    tools:context=".Fragments.mode.ChaussureFragment"
     android:id="@+id/layout"
     android:background="@color/black">
 
@@ -17,7 +17,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adViewTwo">
+       >
 
         <ImageView
             android:id="@+id/pubImage"
