--- a/CommunityMarket/app/src/main/res/layout/fragment_chemise.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_chemise.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.ChemiseFragment"
+    tools:context=".Fragments.mode.AfritudeFragment"
     android:id="@+id/layout"
     android:background="@color/black"    >
 
