--- a/CommunityMarket/app/src/main/res/layout/fragment_cullote.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_cullote.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.CulloteFragment"
+    tools:context=".Fragments.mode.MontreFragment"
     android:id="@+id/layout"
     android:background="@color/black"    >
 
