--- a/CommunityMarket/app/src/main/res/layout/fragment_vetementragment.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_vetementragment.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.mode.PantalonFragment"
-    android:id="@+id/layout"
-    android:background="@color/black"    >
+    tools:context=".Fragments.mode.Vetementragment"
+    android:background="@color/black">
 
     <ViewFlipper
         android:id="@+id/viewFlippertwo"
@@ -17,9 +16,10 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adViewTwo">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:src="@drawable/t_shirt"
             android:id="@+id/pubImage"
             android:layout_width="match_parent"
             android:layout_height="@dimen/fragment_slide_height"
@@ -48,38 +48,5 @@
 
 
     </ViewFlipper>
-
-    <TextView
-        android:id="@+id/imagePubText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/pubImageTextTwo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/pubImageTextThree"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/pubImageTextFour"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="invisible" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pantalonRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo" />
 
 </android.support.constraint.ConstraintLayout>
