--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="0dp"
         app:tabGravity="fill"
         app:tabMode="scrollable"
+        android:theme="@style/AppTheme.AppBarOverlay_two"
         android:layout_marginEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
