--- a/CommunityMarket/app/src/main/res/layout/fragment_tablette__tab.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_tablette__tab.xml
@@ -17,6 +17,7 @@
         app:tabGravity="fill"
         app:tabMode="scrollable"
         android:layout_marginEnd="0dp"
+        android:theme="@style/AppTheme.AppBarOverlay_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></android.support.design.widget.TabLayout>
