--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/layout"
     tools:context=".postActivity.PostActivityFinal"
-   android:background="@color/black">
+   android:background="@color/blanc">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/final_toolbar"
@@ -61,8 +61,8 @@
                 android:hint="@string/produc_name"
                 android:inputType="textPersonName"
                 android:maxLength="35"
-                android:textColor="@color/blanc"
-                android:textColorHint="@color/blanc"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="@dimen/parametre_text_size"
                 android:theme="@style/edit_theme"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +85,8 @@
                 android:inputType="textMultiLine"
                 android:maxLength="400"
                 android:text=""
-                android:textColor="@color/blanc"
-                android:textColorHint="@color/blanc"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="@dimen/parametre_text_size"
                 android:theme="@style/edit_theme"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -106,14 +106,30 @@
                 android:fontFamily="@font/righteous"
                 android:hint="@string/post_prix"
                 android:inputType="number"
-                android:textColor="@color/blanc"
-                android:textColorHint="@color/blanc"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="@dimen/parametre_text_size"
                 android:theme="@style/edit_theme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/post_product_description"
                 tools:ignore="LabelFor" />
+
+            <Spinner
+                android:id="@+id/list_des_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/blanc"
+                android:dropDownWidth="match_parent"
+                android:entries="@array/mode_list"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
+
 
             <ProgressBar
                 android:id="@+id/progressBar_post"
@@ -152,10 +168,10 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="@dimen/new_button_add_button_end"
                 android:layout_marginBottom="70dp"
-                android:background="@drawable/button_background"
+                android:background="@drawable/main_background"
                 android:text="mettre en vendre"
                 android:textAllCaps="false"
-                android:textColor="@color/black"
+                android:textColor="@color/blanc"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:visibility="visible"
@@ -163,7 +179,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_production_prix"
+                app:layout_constraintTop_toBottomOf="@+id/list_des_mode"
                 app:layout_constraintVertical_bias="1.0" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
