--- a/CommunityMarket/app/src/main/res/values/colors.xml
+++ b/CommunityMarket/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorAccent">@color/blanc</color>
+    <color name="colorAccent">@color/black</color>
     <color name="orange">#ff4336</color>
     <color name="likegris">#747474</color>
     <color name="likerouge">#ff4336</color>
     <color name="doux">#FFEB3B</color>
-    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimary">@color/black</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="black">#000</color>
     <color name="blanc">#ffffff</color>
