--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -116,7 +116,64 @@
                 tools:ignore="LabelFor" />
 
             <Spinner
-                android:id="@+id/list_des_mode"
+                android:id="@+id/mode_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/blanc"
+                android:dropDownWidth="match_parent"
+                android:entries="@array/mode_list"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
+
+            <Spinner
+                android:id="@+id/phone_tablet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/blanc"
+                android:dropDownWidth="match_parent"
+                android:entries="@array/mode_list"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
+            <Spinner
+                android:id="@+id/electronique"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/blanc"
+                android:dropDownWidth="match_parent"
+                android:entries="@array/mode_list"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
+            <Spinner
+                android:id="@+id/informatique"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/blanc"
+                android:dropDownWidth="match_parent"
+                android:entries="@array/mode_list"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
+            <Spinner
+                android:id="@+id/beaute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -179,7 +236,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/list_des_mode"
+                app:layout_constraintTop_toBottomOf="@+id/mode_list"
                 app:layout_constraintVertical_bias="1.0" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
