--- a/CommunityMarket/app/src/main/res/layout/fragment_chemise.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_chemise.xml
@@ -74,9 +74,10 @@
         android:visibility="invisible" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/chemiseRecyclerView"
+        android:id="@+id/afrotudeRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
