--- a/CommunityMarket/app/src/main/res/layout/fragment_vetementragment.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_vetementragment.xml
@@ -48,5 +48,12 @@
 
 
     </ViewFlipper>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/vetementRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo" />
 </android.support.constraint.ConstraintLayout>
