--- a/CommunityMarket/app/src/main/res/layout/fragment_console.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_console.xml
@@ -1,14 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Jeux_video.ConsoleFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ViewFlipper
+        android:id="@+id/viewFlippertwo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="@dimen/fragment_slide_height"
+        android:autoStart="true"
+        android:flipInterval="4000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/pubImage"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/fragment_slide_height"
+            android:scaleType="centerCrop" />
+
+
+        <ImageView
+            android:id="@+id/pubImageTwo"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/fragment_slide_height"
+            android:scaleType="centerCrop" />
+
+
+        <ImageView
+            android:id="@+id/pubImageThree"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/fragment_slide_height"
+            android:scaleType="centerCrop" />
+
+
+        <ImageView
+            android:id="@+id/pubImageFour"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/fragment_slide_height"
+            android:scaleType="centerCrop" />
+
+
+    </ViewFlipper>
+
+    <TextView
+        android:id="@+id/imagePubText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/pubImageTextTwo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/pubImageTextThree"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/pubImageTextFour"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/consoleRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo"
+        app:layout_constraintVertical_bias="1.0" />
+
+
+</android.support.constraint.ConstraintLayout>
