--- a/CommunityMarket/app/src/main/res/layout/item_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_home.xml
@@ -51,7 +51,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/righteous"
                 android:lines="1"
-                android:textColor="@color/black"
+                android:textColor="@color/blanc"
                 android:textSize="@dimen/item_principal_name"
                 android:textStyle="bold"
                 android:theme="@style/ToolbarTheme"
@@ -81,7 +81,7 @@
                 android:layout_height="@dimen/principal_desc_height"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="@dimen/principal_prix_top_two"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/righteous"
                 android:lines="3"
@@ -149,12 +149,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/priincipal_comment"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/righteous"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/item_principal_desc"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/image_comment"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/image_comment"
                 app:layout_constraintTop_toTopOf="@+id/image_comment" />
 
