--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -42,6 +42,12 @@
         <item name="colorAccent">@color/black</item>
         <item name="colorPrimaryDark">@color/black</item>
     </style>
+    <style name="edit_themetwo" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="colorPrimary">@color/blanc</item>
+        <item name="colorAccent">@color/blanc</item>
+        <item name="colorPrimaryDark">@color/blanc</item>
+    </style>
     <style name="progress_theme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/righteous</item>
         <item name="colorAccent">@color/black</item>
