--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -113,7 +113,7 @@
         android:hint="@string/message_activity_send_editext"
         android:inputType="textMultiLine|textPersonName"
         android:padding="10dp"
-        android:theme="@style/edit_theme"
+        android:theme="@style/edit_themetwo"
         android:textColor="@color/blanc"
         android:textColorHint="@color/blanc"
         app:layout_constraintBottom_toBottomOf="parent"
