--- a/CommunityMarket/app/src/main/res/layout/activity_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".search.SearchActivity"
     android:id="@+id/layout"
-    android:background="@color/blanc"
+    android:background="@color/black"
     >
 
     <EditText
@@ -24,8 +24,8 @@
         android:hint="search ... "
         android:inputType="textPersonName"
         android:padding="@dimen/post_padding_edit_text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/blanc"
+        android:textColorHint="@color/blanc"
         android:theme="@style/edit_theme"
         app:layout_constraintEnd_toStartOf="@+id/search_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recherche" />
+        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />
 
 
     <android.support.v7.widget.Toolbar
@@ -79,25 +79,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_edit_text"
         app:srcCompat="@drawable/ic_search" />
-
-    <Spinner
-        android:id="@+id/recherche"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:dropDownWidth="match_parent"
-        android:entries="@array/recherche"
-        android:padding="15dp"
-        android:spinnerMode="dropdown"
-        android:theme="@style/edit_theme"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />
-
 
 
 </android.support.constraint.ConstraintLayout>
