--- a/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
@@ -57,13 +57,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/commentaire_name_start"
                 android:layout_marginTop="@dimen/commentaire_user_name_top"
-                android:layout_marginEnd="@dimen/commentaire_user_name_end"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/righteous"
+                android:lines="1"
                 android:text="yannick"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_name_user"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/chat_temps"
                 app:layout_constraintHorizontal_bias="0.004"
                 app:layout_constraintStart_toEndOf="@+id/chat_message_image_profil"
                 app:layout_constraintTop_toTopOf="parent" />
