--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -88,6 +88,8 @@
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:theme="@style/edit_theme"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
