--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -268,12 +268,12 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="@dimen/text_choice_widht"
-                android:layout_height="17dp"
+                android:layout_height="24dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/righteous"
-                android:text=" remplir toutes les informations"
+                android:text="@string/remplir_tout"
                 android:textAlignment="center"
                 android:textSize="@dimen/new_detail_desc_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -288,7 +288,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="70dp"
                 android:fontFamily="@font/righteous"
-                android:text="nb : toutes publications dans la mauvaise categorie , sera supprimé"
+                android:text="@string/attention"
                 android:textAlignment="center"
                 android:textSize="@dimen/new_detail_desc_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
