--- a/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
@@ -35,7 +35,7 @@
         android:layout_width="@dimen/text_choice_widht"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/a_propos_margin_top"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:text="@string/titre_slider1"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="@dimen/desc_marginend"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
         android:text="@string/description_titre_slider1"
