--- a/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
@@ -37,7 +37,7 @@
         android:layout_width="@dimen/desc_widh"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/a_propos_margin_top"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:text="@string/titre_slider3"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -52,7 +52,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
         android:text="@string/description_slider3"
