--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -101,7 +101,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:fontFamily="@font/nunito_bold"
+        android:fontFamily="@font/righteous"
         android:text="@string/choice_intro_text"
         android:textAlignment="center"
         android:textColor="@color/blanc"
