--- a/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side1.xml
@@ -41,7 +41,7 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/slide_title"
         android:textStyle="bold"
-        android:theme="@style/ToolbarTheme"
+        android:theme="@style/edit_theme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="@dimen/desc_marginend"
         android:fontFamily="@font/righteous"
         android:paddingLeft="@dimen/desc_padding"
@@ -60,6 +61,7 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/new_detail_desc_text_size"
         android:textStyle="bold"
+        android:theme="@style/edit_theme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
