--- a/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
+++ b/CommunityMarket/app/src/main/res/layout/welcome_side3.xml
@@ -52,6 +52,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/righteous"
         android:paddingLeft="@dimen/desc_padding"
         android:paddingRight="@dimen/desc_padding"
